== 1.2.0

* Major enhancement
  * All tables are now added to query with JOIN.
  * "add_table" takes a block to configure join clause.


== 1.1.4 2012-10-07

* Major enhancement
  * Key/value tables are now 'LEFT' joined, enabling null testing and simplifying complex queries (with OR).

== 1.1.3 2012-08-30

* Major enhancement
  * Added support for types in select and custom queries "nodes select created_at as foo:time".

== 1.1.2 2012-08-24

* Minor enhancement
  * Fixed bug where 'not-equal' was not supported ('<>' or '!=').

== 1.1.1 2012-06-27

* Major enhancements
  * Fixed bug with default scope (should only be applied on last context).

== 1.1.0 2011-11-01

* Major enhancements
  * Added support for mutliple arguments in functions "date.coalesce(0,4)"

== 1.0.1 2011-07-11

* Minor enhancements
  * Added support for 'all' group in custom queries.

== 1.0.0 2011-05-10

* Major enhancements
  * Added support for 'select' clause.
  * Added support for 'having' clause.

== 0.9.6 2011-05-09

* Major enhancements
  * Fixed a bug where custom_queries would not pre load.
  * Added support for digits in field names.
  * Enabled 'main_class' setting in custom query.

== 0.9.5 2011-02-10

* Major enhancements
  * Better quoting when connection quote uses backslash (eval removes backslash).
  * Fixed a bug when paginating without a limit clause.


== 0.9.4 2010-12-02

* 1 Minor enhancement
  * Should only raise QueryBuilder::Error on initialize.

== 0.9.3 2010-11-15

* 1 Minor enhancement
  * Fixed pagination bug when page count is 1.

== 0.9.2 2010-10-06

* 1 Minor enhancement
  * Removed 'using .. parser' message.

== 0.9.1 2010-09-22

* 1 Major enhancement
  * Key based add_table (used to import key/value based fields).

== 0.9.0 2010-09-14

* 1 Major enhancements
  * Lazy loading of custom queries.
  * Select keys introspection in Query class.
  * Using new RubyLess.translate API.

== 0.8.3 2010-08-31

* 2 Major enhancements